--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title></title>
   </head>
   <body>
-<form class="deck" >
+<form id="deck">
+    <input id="userInput" class="form-control" type="text">
+    <button type="submit" name="button">button</button>
+    <div class="result">
 
+    </div>
 </form>
   </body>
 </html>
