--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
   <script src="js/jquery-3.3.1.js"></script>
   <script src="js/script.js"></script>
   <link rel="stylesheet" href="css/styles.css">
-    <title></title>
-  </head>
-  <body>
-<form id="deck">
-    <input id="userInput" class="form-control" type="text">
-    <button type="submit" name="button">button</button>
-    <div class="result">
+  <title></title>
+</head>
 
-    </div>
-</form>
-  </body>
+<body>
+  <h1>Deck of Cards</h1>
+
+  <ul>
+    <li>
+      <div id="result">
+      </div>
+    </li>
+  </ul>
+
+</body>
+
 </html>
